feat: implementação do container