@@ -23,12 +23,12 @@ class ProductionServiceTest {
     private ProductRepository productRepository;
 
     @InjectMocks
-    private ProductionService productionService; // Nome corrigido aqui
+    private ProductionService productionService;
 
     @Test
-    @DisplayName("Deve calcular corretamente que é possível produzir 5 unidades")
+    @DisplayName("The test should correctly calculate that it is possible to produce 5 units.")
     void shouldCalculateCorrectProductionQuantity() {
-        // GIVEN: Um produto que pede 2 madeiras, e temos 10 no estoque
+
         RawMaterial wood = new RawMaterial();
         wood.setName("Wood");
         wood.setStockQuantity(10.0);
@@ -44,12 +44,10 @@ class ProductionServiceTest {
 
         Mockito.when(productRepository.findAll()).thenReturn(List.of(axe));
 
-        // WHEN: Executamos o cálculo
         List<ProductionSuggestionDTO> result = productionService.calculateSuggestions();
 
-        // THEN: 10 / 2 = 5 unidades possíveis
         Assertions.assertFalse(result.isEmpty());
-        Assertions.assertEquals(5, result.get(0).getQuantityPossible());
-        Assertions.assertEquals(250.0, result.get(0).getTotalPrice()); // 5 * 50.0
+        Assertions.assertEquals(5, result.getFirst().getQuantityPossible());
+        Assertions.assertEquals(250.0, result.getFirst().getTotalPrice()); // 5 * 50.0
     }
 }
